--- a/QPlots.vcxproj.filters
+++ b/QPlots.vcxproj.filters
@@ -71,4 +71,9 @@
       <Filter>Form Files</Filter>
     </QtUic>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Text.txt">
+      <Filter>Source Files</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
